--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
               <a href="http://www.dongchen.pro/">Dong Chen</a><sup>3</sup>,
             </span>
             <span class="author-block">
-              <a href="https://cqf.io/">Qifeng Chen</a><sup>2</sup>
+              <a href="https://cqf.io/">Qifeng Chen</a><sup>2</sup>,
             </span>
             <span class="author-block">
-              <a href="http://en.auto.ustc.edu.cn/2021/0616/c26828a513186/page.htm">Yong Wang</a><sup>1</sup>
+              <a href="http://en.auto.ustc.edu.cn/2021/0616/c26828a513186/page.htm">Yong Wang</a><sup>1</sup>,
             </span>
             <span class="author-block">
               <a href="https://www.microsoft.com/en-us/research/people/fangwen/">Fang Wen</a><sup>3</sup>
