[code] update paper link

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="TBA"
+                <a href="https://arxiv.org/abs/2212.08062"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -217,7 +217,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>TBA.</code></pre>
+    <pre><code>@misc{zhang2022metaportrait,
+      title={MetaPortrait: Identity-Preserving Talking Head Generation with Fast Personalized Adaptation}, 
+      author={Bowen Zhang and Chenyang Qi and Pan Zhang and Bo Zhang and HsiangTao Wu and Dong Chen and Qifeng Chen and Yong Wang and Fang Wen},
+      year={2022},
+      eprint={2212.08062},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV}
+}</code></pre>
   </div>
 </section>
 
