[code] fix video links

--- a/index.html
+++ b/index.html
@@ -193,19 +193,19 @@
         <h2 class="title is-3">Video</h2>
         <h3 class="title is-4">Self Reconstruction</h3>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/GGLqfTCITgM"
+          <iframe src="./static/videos/Self_reconstruction.mp4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <h3 class="title is-4">Cross Reenactment</h3>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/UKye3mbCocQ"
+          <iframe src="./static/videos/Cross_reenactment.mp4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <h3 class="title is-4">Fast Personalization</h3>
         <div class="publication-video">
-          <iframe src="https://www.youtube.com/embed/NXvtYH38Z60"
+          <iframe src="./static/videos/Fast_personalization.mp4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
