Optimize video displaying

--- a/index.html
+++ b/index.html
@@ -131,25 +131,25 @@
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-steve">
           <video poster="" id="steve" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/Self_example.mp4"
+            <source src="./static/videos/Self_reconstruction_2.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-chair-tp">
           <video poster="" id="chair-tp" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/Cross_in_the_wild.mp4"
+            <source src="./static/videos/Cross_reenactment_4.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-shiba">
           <video poster="" id="shiba" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/Personalization_obama.mp4"
+            <source src="./static/videos/Fast_personalization_1.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-fullbody">
           <video poster="" id="fullbody" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/Personalization_IU.mp4"
+            <source src="./static/videos/Fast_personalization_3.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -193,19 +193,49 @@
         <h2 class="title is-3">Video</h2>
         <h3 class="title is-4">Self Reconstruction</h3>
         <div class="publication-video">
-          <iframe src="./static/videos/Self_reconstruction.mp4"
+          <iframe src="./static/videos/Self_reconstruction_1.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <br>
+        <div class="publication-video">
+          <iframe src="./static/videos/Self_reconstruction_2.mp4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <h3 class="title is-4">Cross Reenactment</h3>
         <div class="publication-video">
-          <iframe src="./static/videos/Cross_reenactment.mp4"
+          <iframe src="./static/videos/Cross_reenactment_1.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <br>
+        <div class="publication-video">
+          <iframe src="./static/videos/Cross_reenactment_2.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <br>
+        <div class="publication-video">
+          <iframe src="./static/videos/Cross_reenactment_3.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <br>
+        <div class="publication-video">
+          <iframe src="./static/videos/Cross_reenactment_4.mp4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <h3 class="title is-4">Fast Personalization</h3>
         <div class="publication-video">
-          <iframe src="./static/videos/Fast_personalization.mp4"
+          <iframe src="./static/videos/Fast_personalization_1.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <br>
+        <div class="publication-video">
+          <iframe src="./static/videos/Fast_personalization_2.mp4"
+                  frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <br>
+        <div class="publication-video">
+          <iframe src="./static/videos/Fast_personalization_3.mp4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
