--- a/index.html
+++ b/index.html
@@ -247,14 +247,12 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@misc{zhang2022metaportrait,
-      title={MetaPortrait: Identity-Preserving Talking Head Generation with Fast Personalized Adaptation}, 
-      author={Bowen Zhang and Chenyang Qi and Pan Zhang and Bo Zhang and HsiangTao Wu and Dong Chen and Qifeng Chen and Yong Wang and Fang Wen},
-      year={2022},
-      eprint={2212.08062},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
-}</code></pre>
+    <pre><code>@article{zhang2022metaportrait,
+        title={MetaPortrait: Identity-Preserving Talking Head Generation with Fast Personalized Adaptation}, 
+        author={Bowen Zhang and Chenyang Qi and Pan Zhang and Bo Zhang and HsiangTao Wu and Dong Chen and Qifeng Chen and Yong Wang and Fang Wen},a
+        journal={arXiv:2212.08062},
+        year={2022},
+  }</code></pre>
   </div>
 </section>
 
