--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
             <span class="author-block"><sup>3</sup>Microsoft</span>
           </div>
 
+          <div class="is-size-5 publication-venue">
+            in CVPR 2023
+          </div>
+
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
