[code] update index.html

--- a/index.html
+++ b/index.html
@@ -197,49 +197,49 @@
         <h2 class="title is-3">Video</h2>
         <h3 class="title is-4">Self Reconstruction</h3>
         <div class="publication-video">
-          <iframe src="./static/videos/Self_reconstruction_1.mp4"
+          <iframe src="https://www.youtube.com/embed/9RHKK8JfQI4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <div class="publication-video">
-          <iframe src="./static/videos/Self_reconstruction_2.mp4"
+          <iframe src="https://www.youtube.com/embed/uPqrCLi-OS0"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <h3 class="title is-4">Cross Reenactment</h3>
         <div class="publication-video">
-          <iframe src="./static/videos/Cross_reenactment_1.mp4"
+          <iframe src="https://www.youtube.com/embed/ccAReHsoEH0"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <div class="publication-video">
-          <iframe src="./static/videos/Cross_reenactment_2.mp4"
+          <iframe src="https://www.youtube.com/embed/1KopIEOlYzk"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <div class="publication-video">
-          <iframe src="./static/videos/Cross_reenactment_3.mp4"
+          <iframe src="https://www.youtube.com/embed/J_QexMlugOA"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <div class="publication-video">
-          <iframe src="./static/videos/Cross_reenactment_4.mp4"
+          <iframe src="https://www.youtube.com/embed/cwlmz5d_R2A"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <h3 class="title is-4">Fast Personalization</h3>
         <div class="publication-video">
-          <iframe src="./static/videos/Fast_personalization_1.mp4"
+          <iframe src="https://www.youtube.com/embed/erCJQPEYPn8"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <div class="publication-video">
-          <iframe src="./static/videos/Fast_personalization_2.mp4"
+          <iframe src="https://www.youtube.com/embed/iKHKoWP_AoE"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
         <br>
         <div class="publication-video">
-          <iframe src="./static/videos/Fast_personalization_3.mp4"
+          <iframe src="https://www.youtube.com/embed/bk9TWqrF1X4"
                   frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
       </div>
